Corregidos los height de los iframes para que no salgan las barras de scroll internas

--- a/add_equipo.html
+++ b/add_equipo.html
@@ -6,16 +6,17 @@
     <meta name="author" content="David Navarro - EQUIPO 4" />
     <meta name="description" content="Formularios Google Formularios"/>
     <link href="theme/base.css" rel="stylesheet" />
+    <script type="text/javascript" src="theme/base.js"></script>
     <title>Asignar equipo</title>
   </head>
   <body>
-
     <div id="menu">
         <nav>
             <a href="index.html">Añadir jugador</a>
             <a href="asignar_equipos.html">Asignar equipos</a>
         </nav>
     </div>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeC6LhF7oRVvGiEipbC1gt_u65PzM14K781HHDAgloI2Yf3kg/viewform?embedded=true" width="640" height="542" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeC6LhF7oRVvGiEipbC1gt_u65PzM14K781HHDAgloI2Yf3kg/viewform?embedded=true"
+    width="640" height="620" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
   </body>
 </html>
