--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <title>Asignar jugador</title>
   </head>
   <body>
-
     <div id="menu">
         <nav>
             <a href="add_equipo.html">Añadir equipo</a>
             <a href="asignar_equipos.html">Asignar equipos</a>
         </nav>
     </div>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd_-r-08S4vOP2VnDqarpLrtQhHG7L0AANASQsg0OfEChQBjg/viewform?embedded=true" width="640" height="860" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd_-r-08S4vOP2VnDqarpLrtQhHG7L0AANASQsg0OfEChQBjg/viewform?embedded=true"
+    width="640" height="870" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
   </body>
 </html>
