--- a/asignar_equipos.html
+++ b/asignar_equipos.html
@@ -6,16 +6,17 @@
     <meta name="author" content="David Navarro - EQUIPO 4" />
     <meta name="description" content="Formularios Google Formularios"/>
     <link href="theme/base.css" rel="stylesheet" />
+    <script type="text/javascript" src="theme/base.js"></script>
     <title>Asignar equipo</title>
   </head>
   <body>
-
     <div id="menu">
         <nav>
             <a href="index.html">Añadir jugador</a>
             <a href="add_equipo.html">Añadir equipo</a>
         </nav>
     </div>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdd6K-EsHnqU8wUynFn-Ih760R_dFB3cnyWkyfndg_UhooLVw/viewform?embedded=true" width="640" height="542" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdd6K-EsHnqU8wUynFn-Ih760R_dFB3cnyWkyfndg_UhooLVw/viewform?embedded=true"
+    width="640" height="630" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
   </body>
 </html>
